--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,32 +1,53 @@
 services:
+  db:
+      image: mysql:8
+      container_name: mysql
+      environment:
+        MYSQL_DATABASE: laravel
+        MYSQL_ROOT_PASSWORD: root
+        MYSQL_PASSWORD: root
+        MYSQL_USER: laravel
+      ports:
+        - "3306:3306"
+      volumes:
+        - dbdata:/var/lib/mysql
+      networks:
+        - app-network
   app:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: laravel_app_combined
+    image: laravel-app
+    container_name: laravel-app
+    restart: unless-stopped
+    tty: true
+    environment:
+      SERVICE_NAME: app
+      SERVICE_TAGS: dev
+    working_dir: /var/www
+    volumes:
+      - .:/var/www
+      - /var/www/vendor
+      - ./docker-compose/php/local.ini:/usr/local/etc/php/conf.d/local.ini
+    networks:
+      - app-network
+
+  webserver:
+    image: nginx:alpine
+    container_name: nginx-webserver
+    restart: unless-stopped
     ports:
       - "8080:80"
     volumes:
-      - .:/app
-    environment:
-      PHP_DISPLAY_ERRORS: "1"
-      PHP_MEMORY_LIMIT: "512M"
-      WEB_DOCUMENT_ROOT: "/app/public"
-    depends_on:
-      - db
+      - .:/var/www
+      - ./docker-compose/nginx:/etc/nginx/conf.d/
+    networks:
+      - app-network
 
-  db:
-    image: mysql:8
-    container_name: laravel_db
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: laravel
-      MYSQL_USER: laravel_user
-      MYSQL_PASSWORD: laravel_password
-    ports:
-      - "3306:3306"
-    volumes:
-      - dbdata:/var/lib/mysql
+networks:
+  app-network:
+    driver: bridge
 
 volumes:
   dbdata:
+    driver: local
