--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -7,14 +7,14 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - /app/
+      - .:/app
+      - /app/vendor
     environment:
       PHP_DISPLAY_ERRORS: "1"
       PHP_MEMORY_LIMIT: "512M"
       WEB_DOCUMENT_ROOT: "/app/public"
     depends_on:
       - db
-
   db:
     image: mysql:8
     container_name: laravel_db
@@ -27,6 +27,3 @@ services:
       - "3306:3306"
     volumes:
       - ./dbdata:/var/lib/mysql
-
-volumes:
-  dbdata:
