--- a/docker-compose.portainer.yml
+++ b/docker-compose.portainer.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ..:/app
+      - .:/app
       - /app/vendor
     environment:
       PHP_DISPLAY_ERRORS: "1"
